# smart-codeagent

./: .env.example  .gitignore  PRD.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
.codebuddy/: settings.json
.github/workflows/: ci.yml  release.yml
.omc/: project-memory.json
.sc/: last-chat-settings.json
.trellis/: .template-hashes.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.md  icon.icns
src-tauri/src/: config.rs  lib.rs  main.rs  settings.rs  state.rs
src-tauri/src/agent/: context.rs  host.rs  host_impl.rs  loop_.rs  mod.rs  recovery.rs  rounds.rs  runner.rs  types.rs
src-tauri/src/agent/tools/: ask_user.rs  background.rs  bash.rs  deny_list.rs  edit.rs  glob.rs  grep.rs  ls.rs  mod.rs  path.rs  read.rs  write.rs
src-tauri/src/ipc/: commands.rs  events.rs  mod.rs
src-tauri/src/mcp/: client.rs  http_client.rs  manager.rs  mod.rs  types.rs
src-tauri/src/providers/: anthropic.rs  mod.rs
src-tauri/src/session/: commands.rs  mod.rs  storage.rs  store.rs  types.rs
src-tauri/tests/: ipc_payload_contract.rs  runner_e2e_debug.rs
src/components/: AgentEventBridge.tsx  FileDiff.tsx  McpServerForm.tsx  PreviewPane.tsx  SessionItem.tsx  SessionList.tsx  SettingsPanel.tsx  StatusBar.tsx  TitleBar.tsx
src/hooks/: useAgentEvents.ts  useKeyboardShortcuts.ts
src/lib/: updater.ts
src/types/: mcp.ts  (+7 more)
(+62 files in other folders)
